# data-processing-benchmarks

./: .gitignore  .pre-commit-config.yaml  data_testing.ipynb  pyproject.toml
.github/workflows/: main.yaml
src/data_processing/: __main__.py  const.py  pandas.py  pandas_test.py  playground.py  polars.py
test/: test_performance.py
