[project]
authors = [
    { name = "Toby Devlin", email = "toby@tobydevlin.com" },
]
requires-python = ">=3.8,<4.0"
name = "data-processing"
version = "0.1.0"
description = ""
readme = "readme.md"

dependencies = [
    "pandas>=1.5.3",
    "polars>=0.16.2",
]

[project.optional-dependencies]
ci = [
    "data_processing",
    "pytest-benchmark>=4.0.0",
    "pytest>=7.2.1"
]
dev = [
    "data_processing[ci]",
    "matplotlib>=3.7.0",
    "jupyter>=1.0.0",
    "ipython-memory-magics>=0.3.7",
    "black>=23.1.0",
    "pre-commit>=3.1.0",
]

[project.urls]


[tool.black]
line-length = 120

[tool.pytest.ini_options]
addopts = "-ra -v"
testpaths = ["test"]
pythonpath = ["src"]

[tool.pdm.build]
includes = []

[tool.pdm.scripts]
test = "python -m data_processing"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
